--- a/css/style.css
+++ b/css/style.css
@@ -37,9 +37,9 @@ pre {white-space: pre; white-space: pre-wrap; word-wrap: break-word} /* Allow li
 pre, code, kbd, samp {font-size: 1em; line-height: 1.5em; margin-bottom: 1.5em; font-family: Menlo, Consolas, 'DejaVu Sans Mono', Monaco, monospace}
 
 /* TABLES */
-table {border-collapse: collapse; border-spacing: 0; margin-bottom: 1.5em}
+table {border-collapse: collapse; border-spacing: 0; margin-bottom: .5 em}
 th {text-align: left}
-tr, th, td {padding-right: 1.5em; border-bottom: 0 solid #333}
+tr, th, td {border-bottom: 0 solid #333}
 
 /* FORMS */
 form {margin: 0}
